# code_challenge_bliss

./: .gitignore  .tool-versions  README.md  hello.py  payments.parquet  pyproject.toml  technical_decisions.md
ETL/: extract_json.py
ETL/db_conn/: sqlite_conn.py
ETL/interfaces/: dbi.py  extract_interface.py  load_interface.py  my_log.py  transform_interface.py
dags/: json_duck_etl.py
dags/etl/: json_to_duckdb.py  payments.crypt.parquet
dags/etl/utils/interfaces/: my_log.py
dest_data/: payments.crypt.parquet  payments.decrypt.parquet  payments.parquet
etl/: json_to_duckdb.py  payments.parquet  test.py  transactions.parquet
etl/utils/interfaces/: my_log.py  pipeline.py
infra/: docker-compose.yaml
playground/: assert.py  duck_from_json.py  read_json.py  spark.py
source_data/: payments.crypt.parquet
src/: desafio_etl.py  governance.py
src/code_challenge_bliss.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/orchestration/: .gitignore
src/orchestration/dags/: airflow_etl.py
src/orchestration/infra/: .gitignore  Dockerfile  create_venv.sh  docker-compose.yaml  local_run.sh  providers.txt  requirements.txt
src/tests/: test_json_to_duckdb.py
src/tests/fixtures/: json_duck.py  payments.crypt.parquet  test_load.crypt.parquet  test_load.parquet
src/utils/: json_to_duckdb.py  pipeline.py
tests/: test_json_to_duckdb.py
tests/fixtures/: payments.crypt.parquet  test_load.crypt.parquet  test_load.parquet
