[project]
name = "code-challenge-bliss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=43.0.3",
    "duckdb>=1.1.2",
    "pyarrow>=17.0.0",
    "pytest>=8.3.3",
    "pytz>=2024.2",
    "unidecode>=1.3.8",
]
